# gtkparasite

./: autogen.sh  configure.ac
src/: Makefile.am
